<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera_enhance_black_24dp"
            android:title="@string/make_photo" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/read_info" />
        <item
            android:id="@+id/nav_defect"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/view_new_photos" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/account_setting" />

    </group>

    <item android:title="@string/sign_out">
        <menu>

            <item
                android:id="@+id/nav_signOut"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
