<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountSetting"
    tools:context=".Activities.AddDefect">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScroll_info"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/your_pass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/password"
                        android:padding="5dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/overlayBackground"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelAnimating="true"
                        app:met_maxCharacters="15"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_singleLineEllipsis="true" />
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/your_newpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/new_password"
                        android:padding="5dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/overlayBackground"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/your_pass"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelAnimating="true"
                        app:met_maxCharacters="15"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_singleLineEllipsis="true" />
                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/repeat_newpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/repeat_new_password"
                        android:padding="5dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/overlayBackground"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/your_newpass"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_floatingLabel="highlight"
                        app:met_floatingLabelAnimating="true"
                        app:met_maxCharacters="15"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_singleLineEllipsis="true" />

                </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>