<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RoadDetail">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#0e0d0e"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:layout_height="350dp">

            <ImageView
                android:id="@+id/img_road"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:layout_collapseMode="parallax"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
       android:id="@+id/nestedScroll"
       android:clipToPadding="false"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_behavior="@string/appbar_scrolling_view_behavior">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:cardElevation="2dp"
               app:cardUseCompatPadding="true"
               >
               <android.support.constraint.ConstraintLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <TextView
                       android:id="@+id/road_name"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginEnd="8dp"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="8dp"
                       android:fontFamily="@font/roboto"
                       android:padding="12dp"
                       android:text="@string/road_name"
                       android:textColor="@color/colorPrimary"
                       android:textSize="20sp"
                       android:textStyle="bold"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent" />
                   <TextView
                       android:id="@+id/road_street"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginStart="8dp"
                       android:layout_marginTop="8dp"
                       android:fontFamily="@font/roboto"
                       android:padding="12dp"
                       android:text="@string/street"
                       android:textColor="@color/overlayBackground"
                       android:textSize="16sp"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@+id/road_name" />
               </android.support.constraint.ConstraintLayout>
           </android.support.v7.widget.CardView>
           <android.support.v7.widget.CardView
               app:cardElevation="2dp"
               app:cardUseCompatPadding="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <fragment
                        android:id="@+id/set_mapView"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:layout_width="0dp"
                        android:layout_height="170dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/defect_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto"
                        android:lineSpacingMultiplier="1.5"
                        android:padding="12dp"
                        android:text="@string/description"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/set_mapView" />
                </android.support.constraint.ConstraintLayout>
           </android.support.v7.widget.CardView>
       </LinearLayout>
   </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingfb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:elevation="4dp"
        app:layout_anchor="@+id/app_bar_layout"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/ic_menu_share"
        android:focusable="true" />
</android.support.design.widget.CoordinatorLayout>